Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71947

Unsigned C++ enum values are converted to signed when exported to QML

    XMLWordPrintable

Details

    Description

      C++ enums of type quint32 are converted to negative numbers when they exceed the range of qint32. This results in those being unusable in QML and passing them back to C++ results in undefined behaviour.

      See example.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            rakeller Rainer Keller
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes